Refactor List room: Paginate